<resources>
    <string name="app_name">Advent Hopper</string>

    <string name="title_cardView">Märkte</string>
    <string name="title_map">Kartenansicht</string>
    <string name="others">Sonstiges</string>
    <string name="settings">Einstellungen</string>
    <string name="opensource">Open Source</string>
    <string name="recommend">App empfehlen</string>
    <string name="contact">Schreibe uns</string>

    <string name="title_near">In deiner Nähe</string>
    <string name="title_bestRated">Beliebte</string>
    <string name="action_settings">Einstellungen</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Abbrechen</string>
    <string name="dialog_error_title">Ups&#8230;</string>

    <string name="empty_list">Alle Adventmärkte haben geschlossen</string>
    <string name="error_loading_list">Es gab ein Problem beim Laden der Adventmärkte</string>

    <string name="image_launcher">Advent Hopper Icon</string>
    <string name="action_search">Suchen</string>
    <string name="rate">Bewerten</string>
    <string name="your_rating">Deine Bewertung</string>
    <string name="recommend_txt">Mit Advent Hopper hast du eine Übersicht über alle Adventmärkte in Wien: </string>
    <string name="send_mail">E-Mail versenden mit …</string>

    <string name="content_desc_address">Adresse</string>
    <string name="content_desc_date">Öffnungszeiten</string>
    <string name="content_desc_link">Link</string>
    <string name="content_desc_market_picture">Symbolbild Weihnachtsmarkt</string>
    <string name="content_desc_calculate_route">Route berechnen</string>
    <string name="content_desc_share_market">Teile den Weihnachtsmarkt mit Freunden</string>


    <string name="div_nothing_there">Hier gibt es nichts.</string>
    <string name="default_market_name">Weihnachtsmarkt</string>
    <string name="default_rating">3.0</string>
    <string name="default_market_address">Adresse</string>
    <string name="default_market_hours">Öffnungszeiten</string>
    <string name="default_market_link">Link</string>
    <string name="action_sort">Sortieren</string>
    <string name="action_sort_distance">Sortiere nach Distanz</string>
    <string name="action_sort_rating">Sortiere nach Bewertung</string>
</resources>
