<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_sort_distance"
                android:title="@string/action_sort_distance"
                android:icon="@drawable/ic_place_black_24dp"
                app:showAsAction="withText"
                />
            <item android:id="@+id/action_sort_rating"
                android:title="@string/action_sort_rating"
                android:icon="@drawable/ic_star_black_24dp"
                app:showAsAction="withText"
                />
        </menu>
    </item>

</menu>
