<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/white"
        android:id="@+id/app_bar_layout"
        android:layout_height="250dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:transitionName="marketImage"
                android:background="@mipmap/snow_backdrop"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:id="@+id/marketImage"
                android:contentDescription="@string/content_desc_market_picture" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/detailed_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:elevation="10dp"
                style="@style/AppTheme" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@mipmap/ic_walk"
        android:id="@+id/floatingActionButton"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        app:fabSize="normal"
        android:layout_alignRight="@+id/detailed_toolbar"
        android:layout_alignEnd="@+id/detailed_toolbar"
        app:backgroundTint="?attr/colorPrimary"
        android:tint="@color/white"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"/>

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/distance"
        android:layout_gravity="top|end"
        android:textSize="20sp"
        android:padding="16dp"
        app:layout_anchorGravity="top|right|end"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textColorHighlight="@color/white"
        android:elevation="10dp" />

    <at.gren.tuwien.weihnachtsmarkt.widgets.MapScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="24dp">

            <TextView
                android:text="@string/default_market_name"
                android:layout_width="match_parent"
                android:transitionName="marketTitle"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:paddingBottom="8dp"
                android:alpha="0.87"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar"
                    android:transitionName="ratingBar"
                    android:stepSize="0.5"
                    android:numStars="5"
                    android:rating="3.5"
                    android:clickable="true"
                    android:progressTint="@color/yellow_700"
                    android:secondaryProgressTint="@color/yellow_700"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:theme="@style/RatingBar"
                    android:drawingCacheQuality="high"
                    android:layout_gravity="center_vertical"
                    android:fillViewport="true" />

                <TextView
                    android:text="@string/default_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rating"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:layout_toRightOf="@id/ratingBar"
                    android:layout_toEndOf="@id/ratingBar"
                    android:textSize="20sp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/black"
                    android:alpha="0.54" />

            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp">

                <ImageView
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_access_time"
                    android:id="@+id/imageView"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:minWidth="65dp"
                    android:tint="?attr/colorPrimary"
                    android:contentDescription="@string/content_desc_date"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:text="@string/default_market_hours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/date"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:alpha="0.87"
                        android:paddingBottom="8dp" />

                    <TextView
                        android:text="@string/default_market_hours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/openingHours"
                        android:layout_weight="1"
                        android:paddingLeft="8dp"
                        android:paddingStart="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:alpha="0.87"
                        android:fontFamily="sans-serif"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_place"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:minWidth="65dp"
                    android:tint="?attr/colorPrimary"
                    android:contentDescription="@string/content_desc_address"/>

                <TextView
                    android:text="@string/default_market_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:alpha="0.87"
                    android:autoLink="map" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:baselineAligned="false"
                android:clickable="false">
                <fragment
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:id="@+id/map"
                    android:layout_marginTop="12dp"
                    tools:context=".ui.detailed.DetailedActivity"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_public"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:minWidth="65dp"
                    android:tint="?attr/colorPrimary"
                    android:contentDescription="@string/content_desc_link"/>

                <TextView
                    android:text="@string/default_market_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/weblink"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingStart="8dp"
                    android:alpha="0.87"
                    android:autoLink="web"
                    android:textColorLink="@color/black"
                    android:textColorHighlight="?attr/colorPrimaryDark" />

            </LinearLayout>

        </LinearLayout>

    </at.gren.tuwien.weihnachtsmarkt.widgets.MapScrollView>

</android.support.design.widget.CoordinatorLayout>